welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:8: error: '(' expected but identifier found.
	if estSurBiscuit {nbBis = nbBis + 1}
           ^RunHalf:9: error: '(' expected but identifier found.
	if estSurOrange {nbOr = nbOr + 1}
           ^RunHalf:10: error: illegal start of simple expression
	} 
        ^